--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,18 @@
 body{
-    text-align: center;
+    text-align: left;
     font-family: arial;
-    color: deeppink;
+    color: #333;
+}
+
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+
+}
+
+#container h1{
+    font-size: 20px;
 }
