--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,20 @@ body{
     color: #333;
 }
 
+#cabecera{
+    background: #33A;
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0, 0.75);
+}
+#cabecera #tagline{
+    margin: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container{
     width: 70%;
     padding: 1em;
@@ -15,4 +29,8 @@ body{
 
 #container h1{
     font-size: 20px;
+}
+
+#post{
+    padding: 1em;
 }
